Use `OWNER` instead of my login

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,6 @@
-registry=https://npm.pkg.github.com/hashtagchris
+# If you want to publish a package, uncomment the registry assignment below and replace `OWNER` with the name of the
+# user or organization account on GitHub that owns the repository where you will publish the package. See
+# https://help.github.com/en/github/managing-packages-with-github-package-registry/configuring-npm-for-use-with-github-package-registry#publishing-a-package
+# registry=https://npm.pkg.github.com/OWNER
+
 @codertocat:registry=https://npm.pkg.github.com
