--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,7 @@
-# If you want to publish a package, uncomment the registry assignment below and replace `OWNER` with the name of the
-# user or organization account on GitHub that owns the repository where you will publish the package. See
-# https://help.github.com/en/github/managing-packages-with-github-package-registry/configuring-npm-for-use-with-github-package-registry#publishing-a-package
+# Default registry
+# Uncomment and replace `OWNER` with your username or organization to use a namespaced registry by default for downloads
+# See https://help.github.com/en/github/managing-packages-with-github-package-registry/configuring-npm-for-use-with-github-package-registry#publishing-a-package
 # registry=https://npm.pkg.github.com/OWNER
 
+# Packages from other users and organizations
 @codertocat:registry=https://npm.pkg.github.com
